fix gateway
